# PartitaDesktop

./: .gitignore  README.md  core.py  pyproject.toml  requirements.txt  tasks.py
backend/: exceptions.py  helpers.py
backend/database/: db.py  schema.py  test.sqlite3
backend/entities/: collection_types.py  item_types.py
frontend/: app_config.json  frontend.py  helpers.py
partita/: app_factory.py  main.py
partita/endpoints/: backend.py  frontend.py
static/: App.jsx  index.html
tests/: conftest.py  context.py  test_backend.py
tests/backend_tests/: context.py  test_database.py
tests/backend_tests/.pytest_cache/v/cache/: lastfailed  nodeids
tests/test_partita/test_endpoints/: test_frontend.py
