[tool.poetry]
name = "partita"
version = "0.1.0"
description = ""
authors = ["LachlanMarnham <lachlan.marnham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.138.0"
uvicorn = "^0.34.0"
pytest-cov = "^7.1.0"
pytest-random-order = "^1.2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
invoke = "^3.0.3"
ruff = "^0.15.18"
isort = "^8.0.1"
mypy = "^2.1.0"
pytest = "^9.1.1"
httpx = "^0.28.0"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--random-order",
    "--cov=partita",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
